Adding build and updated deprecation silencing

--- a/hw4/CMakeLists.txt
+++ b/hw4/CMakeLists.txt
@@ -16,9 +16,14 @@ add_executable(opengl_renderer
     texture_loader.cpp)
 
 target_include_directories(opengl_renderer PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMAKE_CURRENT_SOURCE_DIR}/Eigen)
+    ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_compile_definitions(opengl_renderer PRIVATE SHADER_DIR="${CMAKE_CURRENT_SOURCE_DIR}/shaders")
 
 target_link_libraries(opengl_renderer PRIVATE GLUT::GLUT GLEW::GLEW OpenGL::GL PNG::PNG)
+
+
+if(APPLE)
+  target_compile_definitions(opengl_renderer PRIVATE GL_SILENCE_DEPRECATION)
+  target_compile_options(opengl_renderer PRIVATE -Wno-deprecated-declarations)
+endif()
