initial hw5 commit

--- a/hw4/CMakeLists.txt
+++ b/hw4/CMakeLists.txt
@@ -1,11 +1,10 @@
 cmake_minimum_required(VERSION 3.24)
 project(hw4 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 14)# C++ 14 for Eigen compatibility, required
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(OpenGL_GL_PREFERENCE GLVND)
-find_package(OpenGL REQUIRED COMPONENTS OpenGL)
+find_package(OpenGL REQUIRED)
 find_package(GLUT REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(PNG REQUIRED)
@@ -22,7 +21,7 @@ target_compile_definitions(opengl_renderer PRIVATE SHADER_DIR="${CMAKE_CURRENT_S
 
 target_link_libraries(opengl_renderer PRIVATE GLUT::GLUT GLEW::GLEW OpenGL::GL PNG::PNG)
 
-
+# Silence deprecation warnings (annoying, mostly from Eigen)
 if(APPLE)
   target_compile_definitions(opengl_renderer PRIVATE GL_SILENCE_DEPRECATION)
   target_compile_options(opengl_renderer PRIVATE -Wno-deprecated-declarations)
